--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,16 +1,14 @@
 server:
   port: 7001
 spring:
+  profiles:
+    active: dev
   application:
     name: docker-test
   cloud:
     nacos:
       discovery:
         server-addr: 106.14.14.62:8848
-      config:
-        file-extension: yml
-        server-addr: 106.14.14.62:8848
-        shared-dataids: jeecg-cloud-application-beta.yml
 feign:
   sentinel:
     enabled: true
