--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<!-- feign -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>2.1.3.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
